4.20/0a40a93524736c2ce01d82effe2f2bc34d5cf159
gdrom: fix mistake in assignment of error

Apparently the kbuild bots missed this one originally, but at least
it caught it now. Fix compilation error:

All errors (new ones prefixed by >>):

   drivers/cdrom/gdrom.c: In function 'probe_gdrom':
>> drivers/cdrom/gdrom.c:797:3: error: 'rc' undeclared (first use in this function)
      rc = PTR_ERR(gd.gdrom_rq);
      ^~
   drivers/cdrom/gdrom.c:797:3: note: each undeclared identifier is reported only once for each function it appears in

Fixes: ad5fc6bb7221 ("gdrom: convert to blk-mq")
Signed-off-by: Jens Axboe <axboe@kernel.dk>

